--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -21,6 +21,7 @@ div#edittoolbar {
 	border: solid silver 1px;
 	border-bottom-width: 0;
 	background-color: #F3F3F3;
+	height: 32px;
 }
 
 /* Sections */
@@ -36,7 +37,11 @@ div#edittoolbar div.sections div.section {
 	display: none;
 	float: left;
 	width: 100%;
+	margin-left: -1px;
 	border-top: solid 1px #DDDDDD;
+	border-left: solid silver 1px;
+	border-right: solid silver 1px;
+	background-color: #F3F3F3;
 }
 body.rtl div#edittoolbar div.sections div.section {
 	float: right;
