--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -574,3 +574,10 @@ li.lqt-command-reply {
 	margin: 0;
 	display: inline-block;
 }
+
+.lqt-thread-odd {
+	background-color: #e9e9e9;
+}
+.lqt-thread-even {
+	background-color: #ffffff;
+}
