Make the header backgrounds alternate too, so they always contrast with the main background.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52795 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -578,6 +578,11 @@ li.lqt-command-reply {
 .lqt-thread-odd {
 	background-color: #e9e9e9;
 }
+
 .lqt-thread-even {
+	background-color: #ffffff;
+}
+
+.lqt-thread-odd > .lqt-thread-header {
 	background-color: #ffffff;
 }
