Swap even/odd colouring
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52798 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -575,14 +575,14 @@ li.lqt-command-reply {
 	display: inline-block;
 }
 
-.lqt-thread-odd {
+.lqt-thread-even {
 	background-color: #e9e9e9;
 }
 
-.lqt-thread-even {
+.lqt-thread-odd {
 	background-color: #ffffff;
 }
 
-.lqt-thread-odd > .lqt-thread-header {
+.lqt-thread-even > .lqt-thread-header {
 	background-color: #ffffff;
 }
