switching title field from textarea to text input
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@84440 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -472,7 +472,7 @@ a[disabled=true]:hover {
 
 .mwe-grow-textarea, .mwe-long-textarea {
 	overflow: hidden;
-	font-family: sans-serif; /* XXX is this right? */
+	font-family: sans-serif;
 	font-size: small;
 }
 
@@ -480,6 +480,11 @@ fieldset .mwe-long-textarea {
 	width: 17em;
 }
 
+.mwe-title {
+	font-family: sans-serif;
+	font-size: small;
+	width: 100%;
+}
 
 .mwe-upwiz-details-fieldname-input {
 	margin-bottom: 1em; 
