TimedMediaHandler: Add some /* @embed */
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@84452 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/TimedMediaHandler/resources/PopUpThumbVideo.css
+++ b/TimedMediaHandler/resources/PopUpThumbVideo.css
@@ -6,9 +6,11 @@
 	height: 53px;
 	margin-left: -35px;
 	margin-top: -25px;
+	/* @embed */
 	background-image:url('player_big_play_button.png');
 }
 .PopUpMediaTransform a .play-btn-large :hover{
+	/* @embed */
 	background-image:url('player_big_play_button_hover.png');
 }
 .PopUpMediaTransform { 
