--- a/TimedMediaHandler/resources/embedPlayerIframe.css
+++ b/TimedMediaHandler/resources/embedPlayerIframe.css
@@ -6,6 +6,7 @@ body {
 	overflow: hidden;
 }
 .loadingSpinner {
+	/* @embed */
 	background: url( 'loading_ani.gif');
 	position: absolute;
 	top: 50%; left: 50%;
