fixes for IE6, more logical order for building cat interface
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@84783 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/jquery/jquery.mwCoolCats.css
+++ b/UploadWizard/resources/jquery/jquery.mwCoolCats.css
@@ -1,7 +1,3 @@
-.cat-widget {
-  clear: both;
-  position: relative;
-}
 .cat-widget ul {
   list-style: none;
   padding-left: 0;
@@ -43,6 +39,16 @@
 
 .cat-widget li .mwe-upwiz-remove-ctrl {
 	display: inline-block;
+}
+
+/* Fix for IE6 */
+.cat-widget .ui-button {
+	position: static;
+}
+
+/* Make category add button smaller */
+.cat-widget .ui-button-text {
+	padding: 0;
 }
 
 
