--- a/UploadWizard/resources/jquery/jquery.tipsy.css
+++ b/UploadWizard/resources/jquery/jquery.tipsy.css
@@ -1,5 +1,5 @@
 .tipsy { padding: 5px; font-size: small; position: absolute; z-index: 100000; }
-  .tipsy-inner { padding: 5px 8px 4px 8px; background-color:#96d8d9; color: black; max-width: 200px; text-align: center; }
+  .tipsy-inner { padding: 5px 8px 4px 8px; background-color:#e8f5ff; color: black; max-width: 200px; text-align: center; }
   .tipsy-inner { border-radius: 3px; -moz-border-radius:3px; -webkit-border-radius:3px; }
   .tipsy-arrow { position: absolute; background: url('jquery.tipsy.help.gif') no-repeat top left; width: 9px; height: 5px; }
   .tipsy-n .tipsy-arrow { top: 0; left: 50%; margin-left: -4px; }
