--- a/MwEmbedSupport/MwEmbedModules/MwEmbedSupport/skins/common/MwEmbedCommonStyle.css
+++ b/MwEmbedSupport/MwEmbedModules/MwEmbedSupport/skins/common/MwEmbedCommonStyle.css
@@ -19,7 +19,8 @@
 	height:32px;
 	display:block;
 	padding:0px;
-	background-image: url('images/loading_ani.gif');
+	/* @embed */
+	background-image: url(images/loading_ani.gif);
 	margin: auto;
 }
 .cssLoadingSpinner {
