fix for Bug 28318
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@85489 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -281,6 +281,10 @@ a[disabled=true]:hover {
 	background: url('images/24px-spinner-0645ad.gif') no-repeat center center;
 }
 
+.mwe-upwiz-file.hover .mwe-upwiz-status-progress {
+	background: url('images/24px-spinner-0645ad-e0f0ff.gif') no-repeat center center;
+}
+
 .mwe-upwiz-status-stashed, .mwe-upwiz-status-uploaded {
 	background: url('images/32px-Dialog-apply-009900.svg.png') no-repeat center center;
 }
