fixing cursor for thumbnail that doesnt link
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@85647 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -92,6 +92,10 @@ form.mwe-upwiz-form {
 	cursor: pointer;
 }
 
+#mwe-upwiz-stepdiv-file .mwe-upwiz-visible-file {
+	cursor: auto !important;
+}
+
 /* file inputs are freakishly large to overflow the containing div -- we get a div 
    that can act as a more styleable single-click file input */
 .mwe-upwiz-file-input, .disabler {
