--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -696,3 +696,7 @@ input[type='text'].mwe-validator-error, textarea.mwe-validator-error {
 	margin-top: 0em;
 	margin-bottom: 0em;
 }
+
+.ui-dialog .mwe-upwiz-lightbox {
+	padding: 0;
+}
