--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -626,6 +626,10 @@ input[type='text'].mwe-validator-error, textarea.mwe-validator-error {
 	background: url('images/toggle-open.png') no-repeat left center;
 }
 
+.mwe-upwiz-toggler-content {
+	padding-left: 18px;
+}
+
 .mwe-upwiz-toggled {
 	margin-top: 1em;
 }
@@ -681,16 +685,6 @@ input[type='text'].mwe-validator-error, textarea.mwe-validator-error {
 #upload-wizard .ui-corner-right {  -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
 #upload-wizard .ui-corner-left { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
 #upload-wizard .ui-corner-all { -moz-border-radius: 4px; -webkit-border-radius: 4px; }
-
-.mwe-upwiz-deed-license-group {
-	margin-top: 1em;
-	margin-bottom: 1.5em;
-}
-
-.mwe-upwiz-deed-license-group-head {
-	font-weight: bold;
-	margin-bottom: 0em;
-}
 
 .mwe-upwiz-deed-license-group-subhead {
 	color: #797979;
