titles on thanks page
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@85958 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -353,7 +353,7 @@ a[disabled=true]:hover {
 
 .mwe-upwiz-thumbnail {
 	padding: 0.5em;
-	width: 120px;
+	width: auto; 
 }
 
 .mwe-upwiz-thumbnail-side {
