display errors when errors occur at description submission... still not much you can do about them
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@86020 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -279,7 +279,7 @@ a[disabled=true]:hover {
 	width: 40px;
 }
 
-.mwe-upwiz-mask, .mwe-upwiz-status {
+.mwe-upwiz-mask {
 	position: absolute;
 	top: 0px;
 	left: 0px;
