nicer text inputs at thank-you step
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@86022 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -649,6 +649,7 @@ input[type='text'].mwe-validator-error, textarea.mwe-validator-error {
 
 .mwe-readonly {
 	background-color: #ffffff;
+	padding: 0.25em;
 }
 
 .mwe-date-display {
