--- a/ArticleFeedback/modules/jquery.articleFeedback/jquery.articleFeedback.css
+++ b/ArticleFeedback/modules/jquery.articleFeedback/jquery.articleFeedback.css
@@ -282,24 +282,27 @@
 	float: right;
 }
 
+.articleFeedback-expertise-disabled,
+.articleFeedback-helpimprove-disabled {
+	color: silver;
+}
+
 .articleFeedback-expertise {
 	float: left;
 	margin-bottom: 0.5em;
 	margin-top: 0.75em;
 }
 
-.articleFeedback-expertise-disabled {
-	color: silver;
-}
-
-.articleFeedback-expertise input {
+.articleFeedback-expertise input,
+.articleFeedback-helpimprove input {
 	float: left;
 	margin-bottom: 0.5em;
 	clear: both;
 	cursor: pointer;
 }
 
-.articleFeedback-expertise label {
+.articleFeedback-expertise label,
+.articleFeedback-helpimprove label {
 	margin-left: 0.25em;
 	margin-bottom: 0.5em;
 	float: left;
@@ -307,13 +310,41 @@
 	cursor: pointer;
 }
 
-.articleFeedback-expertise-options {
+.articleFeedback-expertise-options,
+.articleFeedback-helpimprove-options {
 	clear: both;
 	display: none;
 }
 
 .articleFeedback-expertise-options input {
 	margin-left: 2em;
+}
+
+.articleFeedback-helpimprove-options input {
+	margin-left: 2em;
+}
+
+.articleFeedback-helpimprove-note {
+	margin-left: 2em;
+	font-size: 0.8em;
+	clear: both;
+}
+
+.articleFeedback-helpimprove-email-validity {
+	float: left;
+	padding: 2px 0.5em;
+}
+
+.articleFeedback-helpimprove-email-validity.valid {
+	border: 1px solid #80FF80;
+	background-color: #C0FFC0;
+	color: black;
+}
+
+.articleFeedback-helpimprove-email-validity.invalid {
+	border: 1px solid #FF8080;
+	background-color: #FFC0C0;
+	color: black;
 }
 
 .articleFeedback-success {
