fixing bug 28477 - allow dates to be manually entered, also some formatting tweaks
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@86585 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/jquery/jquery.mwCoolCats.css
+++ b/UploadWizard/resources/jquery/jquery.mwCoolCats.css
@@ -41,6 +41,10 @@
 	display: inline-block;
 }
 
+.cat-widget .categoryInput {
+	width: 16em;
+}
+
 /* Fix for IE6 */
 .cat-widget .ui-button {
 	position: static;
