Made email field wider (as per mockups)
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@86655 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ArticleFeedback/modules/jquery.articleFeedback/jquery.articleFeedback.css
+++ b/ArticleFeedback/modules/jquery.articleFeedback/jquery.articleFeedback.css
@@ -330,6 +330,10 @@
 	clear: both;
 }
 
+.articleFeedback-helpimprove-email {
+	width: 20em;
+}
+
 .articleFeedback-helpimprove-email-validity {
 	float: left;
 	padding: 2px 0.5em;
