--- a/UploadWizard/resources/jquery/jquery.arrowSteps.css
+++ b/UploadWizard/resources/jquery/jquery.arrowSteps.css
@@ -20,21 +20,26 @@
 }
 
 .arrowSteps li.arrow div {
+	/* @embed */
 	background: url(jquery.arrowSteps.divider.png) no-repeat right center;
 }
 
 /* applied to the element preceding the highlighted step */
 .arrowSteps li.arrow.tail div {
+	/* @embed */
 	background: url(jquery.arrowSteps.tail.png) no-repeat right center;
 }
 
 /* this applies to all highlighted, including the last */
 .arrowSteps li.head div {
+	/* @embed */
 	background: url(jquery.arrowSteps.head.png) no-repeat left center;
 	font-weight: bold;
 }
 
 /* this applies to all highlighted arrows except the last */
 .arrowSteps li.arrow.head div {
+	/* TODO: eliminate duplication of jquery.arrowSteps.head.png embedding */
+	/* @embed */
 	background: url(jquery.arrowSteps.head.png) no-repeat right center;
 }
