- Better error display, handling for description page errors (partial fix for bug 24758; can remove error'ing uploads, very similar to file page errors) - Fixes to morphCrossfade to work in more situations (such as typical jquery multiple invocation)
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@86862 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -704,3 +704,7 @@ input[type='text'].mwe-validator-error, textarea.mwe-validator-error {
 .ui-dialog .mwe-upwiz-lightbox {
 	padding: 0;
 }
+
+.mwe-upwiz-details-texts {
+	padding: 0.5em;
+}
