css fix for 100% width inputs in mwe-upwiz-data
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@86894 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UploadWizard/resources/uploadWizard.css
+++ b/UploadWizard/resources/uploadWizard.css
@@ -388,6 +388,7 @@ a[disabled=true]:hover {
 	float: left;
 	width: 46em;
 	margin-bottom: 1em;
+	padding-right: 1em; /* fix for 100% width textareas in mwe-upwiz-data */
 }
 
 
