Using orange instead of red for "bad".
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@86992 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
+++ b/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
@@ -33,8 +33,8 @@
 
 .articleFeedback-table-cell-bad {
 	display: block;
-	background-color: #ffaa99;
-	color: #ffaa99;
+	background-color: #ffcc99;
+	color: #ffcc99;
 }
 
 .articleFeedback-table-cell-good {
