Requests mostly work now, except for action=query
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@87239 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ApiSandbox/ext.apiSandbox.css
+++ b/ApiSandbox/ext.apiSandbox.css
@@ -9,12 +9,30 @@ td.api-sandbox-label {
 	font-family: monospace;
 }
 
+td.api-sandbox-result-label {
+	width: 12em;
+}
+
 td.api-sandbox-value {
 	width: 18em;
 	vertical-align: top;
 	overflow: auto;
 }
 
-.api-sandbox-input {
+table.api-sandbox-result-container {
+	width: 100%;
+}
+
+#api-sandbox-input {
 	width: 17em;
+}
+
+#api-sandbox-url, #api-sandbox-post {
+	width: 100%;
+}
+
+#api-sandbox-output {
+	width: 100%;
+	height: 15em;
+	overflow: scroll;
 }
