Follow-up r87271: Also load on purge (= view); getArticleId is 0 by default, returns false
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@87274 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
+++ b/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
@@ -31,10 +31,24 @@
 	text-align: right;
 }
 
+.articleFeedback-table-cell-score-1 {
+	background-color: #ffcc00;
+}
+
+
+.articleFeedback-table-cell-score-2,
 .articleFeedback-table-cell-bad {
 	background-color: #ffcc99;
 }
 
+.articleFeedback-table-cell-score-3 {
+	background-color: #99cc99;
+}
+
+.articleFeedback-table-cell-score-4,
 .articleFeedback-table-cell-good {
 	background-color: #99ff99;
+}
+.articleFeedback-table-cell-score-5 {
+	background-color: #00ff00;
 }
