Colorized rating cells and added a bit more padding around all cells.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@87433 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
+++ b/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
@@ -10,10 +10,14 @@
 }
 
 .articleFeedback-table th {
+	padding-left: 0.75em;
+	padding-top: 0.25em;
+	padding-bottom: 0.25em;
 	text-align: left;
 }
 
 .articleFeedback-table td {
+	padding: 0.25em 0.75em;
 	border-top: solid 1px #eeeeee;
 }
 
