[AFT] Remove colors from scores on Special:ArticleFeedback Dashboard, add yet to phrasing of message. Sounds less like an error.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@87695 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
+++ b/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.dashboard.css
@@ -31,6 +31,12 @@
 	text-align: right;
 }
 
+/**
+ * Per ArticleFeedback meeting of 2011-05-06,
+ * disable colors for now. We may re-enable them
+ * later if found useful.
+ */
+/*
 .articleFeedback-table-column-score-0,
 .articleFeedback-table-column-score-1 {
 	background-color: #ffcccc;
@@ -52,4 +58,13 @@
 }
 .articleFeedback-table-column-score-5 {
 	background-color: #55ff55;
+}
+*/
+
+.articleFeedback-table-column-bad {
+	background-color: #ffcc99;
+}
+
+.articleFeedback-table-column-good {
+	background-color: #99ff99;
 }
