--- a/BookManager/client/bookmanager.css
+++ b/BookManager/client/bookmanager.css
@@ -22,7 +22,9 @@
 }
 .mw-book-navigation .mw-prev a {
 	background:url("images/18px-1leftarrow.png") no-repeat scroll left center transparent;
-	padding: 0 50px 0 20px;
+	padding: 0 0 0 20px;
+	margin: 0 50px 0 0;
+
 }
 .mw-book-navigation .mw-index a {
 	background:url("images/18px-1uparrow.png") no-repeat scroll left center transparent;
@@ -31,5 +33,7 @@
 }
 .mw-book-navigation .mw-next a {
 	background:url("images/18px-1rightarrow.png") no-repeat scroll right center transparent;
-	padding: 0  20px 0 50px;
+	padding: 0  20px 0 0;
+	margin: 0  0 0 50px;
+
 }
